<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/pf1"
tools:context=".Alunos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tvTituloAluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTituloAluno"
            android:textSize="30sp"
            android:textColor="#717475"
            android:layout_gravity="center"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/etNomeAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNomeAluno"
            android:inputType="textPersonName"
            android:layout_marginTop="15dp"
            style="@style/formulario"/>

        <EditText
            android:id="@+id/etEnderecoAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etEnderecoAluno"
            android:inputType="textPersonName"
            android:layout_marginTop="15dp"
            style="@style/formulario"/>

        <EditText
            android:id="@+id/etTelefoneAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etTelefoneAluno"
            android:inputType="number"
            android:layout_marginTop="15dp"
            style="@style/formulario"/>

        <Spinner
            android:id="@+id/spTurmaAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spTurma"
            android:layout_marginTop="15dp" />


        <Button
            android:id="@+id/btnSalvarAluno"
            android:layout_width="128dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="#00F0ECF4"
            android:text="@string/btnSalvar"
            android:textColor="#717475"
            android:textSize="20dp" />

    </LinearLayout>

<com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/navegationMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentBottom="true"
    app:itemBackground="@color/barraNavegacao"
    app:itemIconTint="@drawable/selector"
    app:itemTextColor="@drawable/selector"
    app:menu="@menu/menu_buttom" />
</RelativeLayout>